--- a/html/index.html
+++ b/html/index.html
@@ -16,17 +16,19 @@
 
 
 </head>
-<body>
+<body>  
     <div class="canvas">
         <div class="logo">LOGO</div>
         <div class="circle_by_logo"></div>
     <nav>
-        <ul>
-            <li id="fst">CONCEPT</li>
-            <li id="sec">CHATROOM</li>
-            <li id="thd">ACCOUNT</li>
+        <ul id="list">
+            <li id="fst" class="element">CONCEPT</li>
+            <li id="sec" class="element">CHATROOM</li>
+            <li id="thd" class="element"><a href="./login_1.html">ACCOUNT</a></li>
         </ul>
     </nav>
+
+    
     <div class="robot_intel">Robot Intelligence</div>
     <div class="chatpdf">CHATPDF</div>
     <div class="introduction">ChatPDF是一个基于Python的PDF处理工具，它可以用于创建、合并、拆分、加密和解密PDF文件，以及提取文本<br>和图像等。ChatPDF提供了简单易用的API，使得用户可以方便地完成各种PDF处理任务。ChatPDF还是一种工具<br>，它使用户能够像人一样与他们的PDF文档进行交互。它的工作原理是分析PDF文件以创建语义索引，然后将相关<br>段落呈现给文本生成AI。</div>
