--- a/html/index.html
+++ b/html/index.html
@@ -22,8 +22,8 @@
         <div class="circle_by_logo"></div>
     <nav>
         <ul id="list">
-            <li id="fst" class="element">CONCEPT</li>
-            <li id="sec" class="element">CHATROOM</li>
+            <li id="fst" class="element"><a href="#">CONCEPT</a></li>
+            <li id="sec" class="element"><a href="#">CHATROOM</a></li>
             <li id="thd" class="element"><a href="./login_1.html">ACCOUNT</a></li>
         </ul>
     </nav>
