--- a/html/index.html
+++ b/html/index.html
@@ -23,7 +23,7 @@
     <nav>
         <ul id="list">
             <li id="fst" class="element"><a href="#">CONCEPT</a></li>
-            <li id="sec" class="element"><a href="#">CHATROOM</a></li>
+            <li id="sec" class="element"><a href="./QandA.html">CHATROOM</a></li>
             <li id="thd" class="element"><a href="./login_1.html">ACCOUNT</a></li>
         </ul>
     </nav>
